; ModuleID = '/home/carl/AnghaBench/freebsd/sys/netinet/libalias/extr_alias_mod.c_walk_dll_chain.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/netinet/libalias/extr_alias_mod.c_walk_dll_chain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dll = type { i32 }

@dll_chain = common dso_local global i32 0, align 4
@next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.dll* @walk_dll_chain() #0 {
  %1 = alloca %struct.dll*, align 8
  %2 = alloca %struct.dll*, align 8
  %3 = call %struct.dll* @SLIST_FIRST(i32* @dll_chain)
  store %struct.dll* %3, %struct.dll** %2, align 8
  %4 = load %struct.dll*, %struct.dll** %2, align 8
  %5 = icmp eq %struct.dll* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  store %struct.dll* null, %struct.dll** %1, align 8
  br label %11

7:                                                ; preds = %0
  %8 = load i32, i32* @next, align 4
  %9 = call i32 @SLIST_REMOVE_HEAD(i32* @dll_chain, i32 %8)
  %10 = load %struct.dll*, %struct.dll** %2, align 8
  store %struct.dll* %10, %struct.dll** %1, align 8
  br label %11

11:                                               ; preds = %7, %6
  %12 = load %struct.dll*, %struct.dll** %1, align 8
  ret %struct.dll* %12
}

declare dso_local %struct.dll* @SLIST_FIRST(i32*) #1

declare dso_local i32 @SLIST_REMOVE_HEAD(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
